--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ button:active {
 }
 
 .titleColor {
+  width: 320px;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(46, 45, 45);
   color: #fff;
@@ -32,6 +34,8 @@ button:active {
   font-size: larger;
   padding: 20px;
   border-radius: 10px;
+  border: none;
+  box-shadow: #000 2px, 2px, 20px, 5px;
 }
 
 .titleColor span {
